--- a/src/static/css/sidebars.css
+++ b/src/static/css/sidebars.css
@@ -19,11 +19,11 @@
   background-color: transparent;
   border: 0;
 }
-.btn-toggle:hover,
+/* .btn-toggle:hover,
 .btn-toggle:focus {
   color: rgba(0, 0, 0, .85);
   background-color: #d2f4ea;
-}
+} */
 
 .btn-toggle::before {
   width: 1.25em;
@@ -47,10 +47,10 @@
   margin-left: 1.25rem;
   text-decoration: none;
 }
-.btn-toggle-nav a:hover,
+/* .btn-toggle-nav a:hover,
 .btn-toggle-nav a:focus {
   background-color: #d2f4ea;
-}
+} */
 
 .scrollarea {
   overflow-y: auto;
@@ -58,3 +58,4 @@
 
 .fw-semibold { font-weight: 600; }
 .lh-tight { line-height: 1.25; }
+
